[package]
name = "rs_ip_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
sqlite = "0.30.4"
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8.0"
futures = "0.3.28"